# chaos-lambda-extension

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTION.md  Cargo.toml  LAYERS.md  README.md  justfile  rustwrap.yaml
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: audit.yml  gate-code.yml  release.yml
examples/nodejs-hello-world/: samconfig.toml  template.yaml
examples/nodejs-hello-world/hello-world/: app.mjs
misc/: bootstrap
src/: lib.rs  main.rs  routes.rs
tests/: cli.rs
