[package]
name = "chaos-lambda-extension"
version = "0.1.0"
edition = "2021"
authors = ["Efi Merdler-Kravitz @TServerless <efi.merdler@gmail.com>"]
description = "Inject chaos into your Lambda using an extension"
license = "Apache-2.0"
repository = "https://github.com/aws-cli-tools/chaos-lambda-extension"
keywords = ["AWS", "Lambda", "API", "Rust"]
readme = "README.md"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.19"
lambda-extension = "0.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["native-tls-vendored", "json", "serde_json"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "fmt",
] }

[features]
aws_configured = []

[dev-dependencies]
temp-env = { version = "0.3.4", features = ["async_closure"] }
tower = { version = "0.4.13", features = ["util"] }
wiremock = "0.5.19"
